[gd_scene load_steps=8 format=2]

[ext_resource path="res://square.png" type="Texture" id=1]
[ext_resource path="res://Environment /Barrel.gd" type="Script" id=2]
[ext_resource path="res://Game/circle.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24.1605, 38.1977 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, -0.00974172, 0, 0, Vector2( 0.24511, 1 ), 0.0887299, 0.0887299, 0, 0, Vector2( 1, 0.00410688 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.559702, 1 )
colors = PoolColorArray( 0.956863, 0.67451, 0.00784314, 1, 1.2, 0.180392, 0, 0.686275, 0.0823529, 0.0823529, 0.0823529, 1 )

[sub_resource type="CircleShape2D" id=4]
radius = 143.886

[node name="Barrel" type="RigidBody2D" groups=[
"Barrels",
]]
mass = 5.0
gravity_scale = 5.0
contacts_reported = 1
contact_monitor = true
angular_velocity = 10.0
script = ExtResource( 2 )

[node name="square3" type="Sprite" parent="."]
self_modulate = Color( 1.2, 0.27, 0.15, 1 )
rotation = 1.57079
scale = Vector2( 1.18997, 0.728861 )
texture = ExtResource( 1 )

[node name="square2" type="Sprite" parent="."]
self_modulate = Color( 1.2, 0.87, 0.11, 1 )
position = Vector2( 0.667419, -0.667419 )
rotation = 2.35619
scale = Vector2( 0.463554, 0.383981 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Flames" type="CPUParticles2D" parent="."]
position = Vector2( -0.443939, 1.5025 )
amount = 40
local_coords = false
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 30, 40 )
direction = Vector2( 0, -1 )
spread = 180.0
gravity = Vector2( 0, -9.8 )
initial_velocity = 50.0
damping = 63.65
damping_random = 0.35
scale_amount = 0.5
scale_amount_random = 0.14
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="DamageZone" type="Area2D" parent="."]
monitoring = false
collision_mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
modulate = Color( 1, 1, 1, 0.270588 )
shape = SubResource( 4 )
[connection signal="body_entered" from="." to="." method="_on_Barrel_body_entered"]
[connection signal="body_entered" from="DamageZone" to="." method="_on_DamageZone_body_entered"]
